win: Unbreak clang component build after https://codereview.chromium.org/2683043004

BUG=691714

Review-Url: https://codereview.chromium.org/2694053003
Cr-Commit-Position: refs/heads/master@{#450148}

Former-commit-id: 63ab88124b5ecfd54cd839c4a7a098d0734b1d50