third_party/WebKit/public/platform/WebCoalescedInputEvent.h
@@ -29,7 +29,9 @@ class BLINK_PLATFORM_EXPORT WebCoalescedInputEvent {
   std::vector<const WebInputEvent*> getCoalescedEventsPointers() const;
 
  private:
-  struct WebInputEventDeleter {
+  // TODO(hans): Remove this once clang-cl knows to not inline dtors that
+  // call operator(), https://crbug.com/691714
+  struct BLINK_PLATFORM_EXPORT WebInputEventDeleter {
     void operator()(blink::WebInputEvent*) const;
   };
 
